@@ -104,6 +104,9 @@
 #	define NEKO_LITTLE_ENDIAN
 #endif
 
+#cmakedefine NEKO_JIT_ENABLE
+#cmakedefine NEKO_JIT_DEBUG
+
 #define NEKO_VERSION_MAJOR	@NEKO_VERSION_MAJOR@
 #define NEKO_VERSION_MINOR	@NEKO_VERSION_MINOR@
 #define NEKO_VERSION_PATCH	@NEKO_VERSION_PATCH@
